--- a/angular/app/pages/footer/footer.page.html
+++ b/angular/app/pages/footer/footer.page.html
@@ -2,5 +2,5 @@
   <div class="pull-right hidden-xs">
     <b>Version</b> 2.3.3
   </div>
-  <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">SereNity</a>.</strong> All rights reserved.
+  <strong>Copyright &copy; 2017 <a href="#">SereNity</a>.</strong> All rights reserved.
 </footer>
